--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
     --clr-secondary: #f3f6fd;
     --clr-grey-1: hsl(209, 61%, 16%);
     --clr-grey-5: hsl(209, 28%, 39%);
+    --clr-grey-10: hsl(209, 9%, 90%);
     --clr-black: #181818;
     --clr-white: #fff;
     --letter-spacing: 2px;
@@ -326,5 +327,56 @@ p {
         top: -1.5rem;
         left: -1.5rem;
         z-index: -1;
+    }
+}
+
+/* services */
+.services {
+    background: var(--clr-grey-10);
+}
+.services-center {
+    max-width: 90vw;
+}
+.service {
+    text-align: center;
+    margin-bottom: 2rem;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 20rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+}
+.service-icon {
+    background: var(--clr-primary-9);
+    color: var(--clr-primary-1);
+    padding: 0.5rem;
+    display: inline-block;
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    border-radius: var(--border-radius);
+}
+.service-title {
+    margin-bottom: 0.5rem;
+    text-transform: capitalize;
+}
+.service-text {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media screen and (min-width: 576px) {
+    .services-center {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+    .service {
+        flex: 0 0 45%;
+        max-width: 18rem;
+    }
+}
+@media screen and (min-width: 992px) {
+    .service {
+        flex: 0 0 23%;
     }
 }
