--- a/styles.css
+++ b/styles.css
@@ -380,3 +380,67 @@ p {
         flex: 0 0 23%;
     }
 }
+
+/* case studies */
+.case-card {
+    transition: var(--transition);
+    background: var(--clr-grey-10);
+    box-shadow: var(--light-shadow);
+    margin-bottom: 2rem;
+}
+.case-card:hover {
+    box-shadow: var(--dark-shadow);
+    transform: scale(1.02);
+    border-bottom-right-radius: var(--border-radius);
+    border-bottom-left-radius: var(--border-radius);
+}
+
+.case-img-container {
+    position: relative;
+}
+.case-img {
+    height: 15rem;
+    object-fit: cover;
+    border-top-left-radius: var(--border-radius);
+    border-top-right-radius: var(--border-radius);
+}
+.client {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background: var(--clr-primary-5);
+    margin-bottom: 0;
+    color: var(--clr-grey-1);
+    text-transform: capitalize;
+    padding: 0.25rem 0.5rem;
+}
+.case-info {
+    padding: 1.25rem 1.5rem;
+}
+.case-info h4 {
+    margin: 0.5rem;
+    margin-left: 0;
+}
+.case-btn {
+    text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+    .studies-center {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .case-card {
+        flex: 0 0 49%;
+    }
+}
+
+@media screen and (min-width: 1170px) {
+    .studies-center {
+        max-width: 85vw;
+    }
+    .case-card {
+        flex: 0 0 31.5%;
+    }
+}
