--- a/styles.css
+++ b/styles.css
@@ -444,3 +444,66 @@ p {
         flex: 0 0 31.5%;
     }
 }
+
+/* contact and newsletter */
+.contact {
+    background: var(--clr-primary-1);
+    padding: 5rem 0;
+}
+
+.contact-title {
+    color: var(--clr-white);
+    text-align: center;
+}
+.contact-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.form-control {
+    flex: 1 1 auto;
+    color: var(--clr-grey-5);
+}
+
+.form-control,
+.btn-submit {
+    padding: 0.375rem 0.7rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    font-weight: 300;
+    letter-spacing: var(--letter-spacing);
+    background: var(--clr-white);
+    text-transform: capitalize;
+    border: transparent;
+}
+
+.form-control::placeholder {
+    color: inherit;
+}
+.btn-submit {
+    font-family: var(--ff-primary);
+    margin-left: 0.5rem;
+    background: var(--clr-primary-9);
+    color: var(--clr-primary-1);
+    cursor: pointer;
+    transition: var(--transition);
+}
+
+.btn-submit:hover {
+    background: var(--clr-primary-5);
+    color: var(--clr-primary-9);
+}
+
+@media screen and (min-width: 992px) {
+    .contact-center {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        max-width: 90vw;
+    }
+    .contact-form {
+        align-self: flex-end;
+        flex: 0 1 50%;
+        padding-left: 3rem;
+    }
+}
