--- a/styles.css
+++ b/styles.css
@@ -40,10 +40,6 @@ ul {
 a {
     text-decoration: none;
 }
-img {
-    width: 100%;
-    display: block;
-}
 img:not(.nav-logo) {
     width: 100%;
     display: block;
@@ -157,6 +153,122 @@ p {
 
 /* navbar */
 
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: var(--clr-white);
+    box-shadow: var(--dark-shadow);
+    z-index: 5;
+}
+.nav-icons {
+    display: none;
+}
+.nav-center {
+    width: 100%;
+    max-width: 1170px;
+    margin: 0 auto;
+}
+.nav-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 2rem;
+}
+.nav-toggle {
+    background: transparent;
+    border: none;
+    font-size: 1.5rem;
+    color: var(--clr-primary-5);
+    cursor: pointer;
+    transition: var(--transition);
+}
+.nav-toggle:hover {
+    transform: scale(1.2);
+}
+.nav-link {
+    display: block;
+    padding: 1rem 2rem;
+    text-transform: capitalize;
+    letter-spacing: var(--letter-spacing);
+    transition: var(--transition);
+    cursor: pointer;
+    font-size: 1rem;
+}
+.nav-link:hover {
+    color: var(--clr-primary-1);
+    background: var(--clr-primary-9);
+    padding-left: 2.25rem;
+    border-left: 2px solid var(--clr-primary-1);
+}
+.nav-logo {
+    height: 2.3rem;
+}
+.nav-header h1 {
+    font-size: 1.25rem;
+}
+.nav-links {
+    height: 0;
+    overflow: hidden;
+    transition: var(--transition);
+}
+.show-links {
+    height: 280px;
+}
+html {
+    scroll-behavior: smooth;
+}
+@media screen and (min-width: 992px) {
+    .nav-center {
+        max-width: 90vw;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .nav-toggle {
+        display: none;
+    }
+    .nav-logo {
+        margin-right: 3rem;
+        cursor: pointer;
+    }
+    .nav-links {
+        height: auto;
+    }
+    .nav-header {
+        padding: 0;
+    }
+    .navbar {
+        padding: 1rem 2rem;
+    }
+    .nav-link {
+        display: inline-block;
+        padding: 0 0;
+        margin-right: 1rem;
+    }
+    .nav-link:hover {
+        padding: 0;
+        border: none;
+        color: var(--clr-primary-5);
+        background: transparent;
+        text-decoration: underline;
+    }
+    .nav-icons {
+        display: flex;
+    }
+    .nav-icon {
+        margin-right: 0.7rem;
+        color: var(--clr-primary-1);
+        font-size: 2rem;
+        transition: var(--transition);
+    }
+    .nav-icon:hover {
+        color: var(--clr-primary-5);
+        transform: scale(1.2);
+    }
+}
 /* hero */
 .hero {
     min-height: 100vh;
@@ -169,6 +281,7 @@ p {
     text-align: center;
     color: var(--clr-white);
     padding: 0 3rem;
+    margin-top: 3rem;
 }
 .hero-banner h1 {
     text-transform: uppercase;
