--- a/styles.css
+++ b/styles.css
@@ -637,6 +637,7 @@ html {
 
 /* team */
 .team-center {
+    padding: 1rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -650,12 +651,17 @@ html {
     position: relative;
     margin-bottom: 1rem;
     background: var(--clr-primary-1);
-    flex: 0 0 100%;
+    flex: 0 0 calc(50% - 0.5rem);
     overflow: hidden;
     border-radius: var(--border-radius);
+    aspect-ratio: 1 / 1;
 }
 .team-img {
     transition: var(--transition);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
 }
 .team-detail {
     position: absolute;
@@ -686,6 +692,9 @@ html {
 @media screen and (min-width: 572px) {
     .team-img-container {
         flex: 0 0 50%;
+    }
+    .team-center {
+        padding: 0;
     }
 }
 @media screen and (min-width: 768px) {
